--- a/ZSMDP/bin/view/addTime.fxml
+++ b/ZSMDP/bin/view/addTime.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -78,18 +78,17 @@
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #90512c;" GridPane.columnSpan="31" GridPane.rowSpan="31">
          <children>
-            <TextField editable="false" layoutX="158.0" layoutY="41.0" prefHeight="51.0" prefWidth="483.0" style="-fx-background-color: #90332c;" text="    -EVIDENTIRANJE PROLASKA VOZA-">
+            <Label layoutX="320.0" layoutY="174.0" prefHeight="18.0" prefWidth="54.0" text="Stanica" textAlignment="CENTER">
                <font>
-                  <Font name="System Bold" size="24.0" />
+                  <Font name="System Bold" size="12.0" />
                </font>
-            </TextField>
+            </Label>
             <Button fx:id="backButton" layoutX="158.0" layoutY="505.0" mnemonicParsing="false" onAction="#goBack" prefHeight="26.0" prefWidth="92.0" style="-fx-background-color: #653d1f;" text="Povratak" textFill="#fdf8f8" />
             <Button fx:id="saveButton" layoutX="549.0" layoutY="505.0" mnemonicParsing="false" onAction="#save" prefHeight="26.0" prefWidth="92.0" style="-fx-background-color: #65231f;" text="Sačuvaj" textFill="#e5dede" />
-            <GridPane fx:id="map" layoutX="153.0" layoutY="201.0" prefHeight="91.0" prefWidth="494.0">
+            <GridPane fx:id="map" alignment="CENTER" layoutX="156.0" layoutY="207.0" prefHeight="174.0" prefWidth="483.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -97,6 +96,26 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
+            <Label layoutX="195.0" layoutY="174.0" prefHeight="18.0" prefWidth="54.0" text="   Linija" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="410.0" layoutY="174.0" prefHeight="18.0" prefWidth="111.0" text="Planirano vrijeme " textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="539.0" layoutY="174.0" prefHeight="18.0" prefWidth="111.0" text="Tačno vrijeme" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label contentDisplay="CENTER" layoutX="158.0" layoutY="54.0" prefHeight="51.0" prefWidth="483.0" style="-fx-background-color: #90332c;" text="      -EVIDENTIRANJE PROLASKA VOZA-" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
