--- a/ZSMDP/bin/view/login.fxml
+++ b/ZSMDP/bin/view/login.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LoginController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LoginController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -35,23 +38,36 @@
    <children>
       <AnchorPane prefHeight="302.0" prefWidth="534.0" style="-fx-background-color: cd853c;" GridPane.columnSpan="6" GridPane.rowSpan="11">
          <children>
-            <AnchorPane layoutY="26.0" prefHeight="264.0" prefWidth="319.0" style="-fx-background-color: cd853f;">
+            <AnchorPane layoutX="14.0" layoutY="91.0" prefHeight="358.0" prefWidth="430.0" style="-fx-background-color: cd853f;">
                <children>
-                  <ImageView fitHeight="221.0" fitWidth="319.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="393.0" fitWidth="430.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../images/train.jpg" />
                      </image>
                   </ImageView>
                </children>
             </AnchorPane>
-            <TextField fx:id="userNameTextField" layoutX="366.0" layoutY="113.0" promptText="Korisničko ime" style="-fx-background-color: cdaf3f;" />
-            <TextField fx:id="passwordTextField" layoutX="366.0" layoutY="151.0" promptText="Lozinka" style="-fx-background-color: cdaf3f;" />
-            <Button fx:id="loginButton" layoutX="400.0" layoutY="195.0" mnemonicParsing="false" onAction="#login" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #cd743f;" text="Prijava" />
-            <TextField alignment="TOP_LEFT" editable="false" layoutX="332.0" layoutY="40.0" prefHeight="54.0" prefWidth="231.0" style="-fx-background-color: #90512c;" text="-Prijava korisnika-">
+            <TextField fx:id="userNameTextField" layoutX="455.0" layoutY="202.0" prefHeight="54.0" prefWidth="222.0" promptText="Korisničko ime" style="-fx-background-color: #cd743f;">
+               <cursor>
+                  <Cursor fx:constant="WAIT" />
+               </cursor>
+               <font>
+                  <Font size="18.0" />
+               </font></TextField>
+            <Button fx:id="loginButton" layoutX="489.0" layoutY="392.0" mnemonicParsing="false" onAction="#login" prefHeight="38.0" prefWidth="155.0" style="-fx-background-color: cdaf3f;" text="Prijava">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font></Button>
+            <PasswordField fx:id="passwordTextField" layoutX="455.0" layoutY="293.0" prefHeight="54.0" prefWidth="222.0" promptText="Lozinka" style="-fx-background-color: #cd743f;">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </PasswordField>
+            <Label alignment="CENTER" layoutX="194.0" layoutY="28.0" prefHeight="54.0" prefWidth="430.0" style="-fx-background-color: #90512c;" text="-PRIJAVA KORISNIKA-">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
-            </TextField>
+            </Label>
          </children>
       </AnchorPane>
    </children>
