--- a/ZSMDP/bin/view/login.fxml
+++ b/ZSMDP/bin/view/login.fxml
@@ -23,9 +23,10 @@
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
+    <RowConstraints />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -36,38 +37,39 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <AnchorPane prefHeight="302.0" prefWidth="534.0" style="-fx-background-color: cd853c;" GridPane.columnSpan="6" GridPane.rowSpan="11">
+      <AnchorPane prefHeight="302.0" prefWidth="534.0" style="-fx-background-color: ffffff;" GridPane.columnSpan="6" GridPane.rowIndex="1" GridPane.rowSpan="11">
          <children>
-            <AnchorPane layoutX="14.0" layoutY="91.0" prefHeight="358.0" prefWidth="430.0" style="-fx-background-color: cd853f;">
-               <children>
-                  <ImageView fitHeight="393.0" fitWidth="430.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/train.jpg" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
-            <TextField fx:id="userNameTextField" layoutX="455.0" layoutY="202.0" prefHeight="54.0" prefWidth="222.0" promptText="Korisničko ime" style="-fx-background-color: #cd743f;">
+            <Label alignment="CENTER" layoutX="219.0" layoutY="8.0" prefHeight="44.0" prefWidth="430.0" style="-fx-background-color: #90512c;" text="-PRIJAVA KORISNIKA-">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="userNameTextField" layoutX="521.0" layoutY="203.0" prefHeight="44.0" prefWidth="202.0" promptText="Korisničko ime" style="-fx-background-color: #cd743f;">
                <cursor>
                   <Cursor fx:constant="WAIT" />
                </cursor>
                <font>
                   <Font size="18.0" />
                </font></TextField>
-            <Button fx:id="loginButton" layoutX="489.0" layoutY="392.0" mnemonicParsing="false" onAction="#login" prefHeight="38.0" prefWidth="155.0" style="-fx-background-color: cdaf3f;" text="Prijava">
+            <Button fx:id="loginButton" layoutX="525.0" layoutY="353.0" mnemonicParsing="false" onAction="#login" prefHeight="44.0" prefWidth="193.0" style="-fx-background-color: cdaf3f;" text="Prijava">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="System Bold" size="18.0" />
                </font></Button>
-            <PasswordField fx:id="passwordTextField" layoutX="455.0" layoutY="293.0" prefHeight="54.0" prefWidth="222.0" promptText="Lozinka" style="-fx-background-color: #cd743f;">
+            <PasswordField fx:id="passwordTextField" layoutX="521.0" layoutY="279.0" prefHeight="44.0" prefWidth="202.0" promptText="Lozinka" style="-fx-background-color: #cd743f;">
                <font>
                   <Font size="18.0" />
                </font>
             </PasswordField>
-            <Label alignment="CENTER" layoutX="194.0" layoutY="28.0" prefHeight="54.0" prefWidth="430.0" style="-fx-background-color: #90512c;" text="-PRIJAVA KORISNIKA-">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Label>
+            <ImageView fitHeight="522.0" fitWidth="526.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/triangle.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="179.0" fitWidth="257.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/train.jpg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
