--- a/ZSMDP/src/view/zsmdp.fxml
+++ b/ZSMDP/src/view/zsmdp.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -118,6 +121,20 @@
                </image>
             </ImageView>
             <Label fx:id="userLabel" layoutX="165.0" layoutY="130.0" prefHeight="26.0" prefWidth="82.0" text="label" />
+            <ComboBox fx:id="locationComboBox" editable="true" layoutX="508.0" layoutY="190.0" onAction="#initializeUserComboBox" prefWidth="150.0" promptText="Izaberi lokaciju" style="-fx-background-color: #cd853f;" />
+            <ComboBox fx:id="userComboBox" editable="true" layoutX="670.0" layoutY="190.0" onAction="#selectUser" prefWidth="150.0" promptText="Izaberi korisnika" />
+            <ImageView fitHeight="395.0" fitWidth="402.0" layoutX="458.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/template4.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="758.0" layoutY="558.0" onMouseClicked="#sendMessage" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/send.png" />
+               </image>
+            </ImageView>
+            <TextField fx:id="NewMessageTextField" layoutX="539.0" layoutY="568.0" prefHeight="26.0" prefWidth="177.0" promptText="Unesite poruku..." style="-fx-background-color: #f2db90;" />
+            <TextArea fx:id="MessageTextArea" layoutX="542.0" layoutY="280.0" prefHeight="257.0" prefWidth="234.0" />
          </children>
       </AnchorPane>
    </children>
