--- a/ZSMDP/src/view/zsmdp.fxml
+++ b/ZSMDP/src/view/zsmdp.fxml
@@ -128,13 +128,18 @@
                   <Image url="@../../images/template4.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="758.0" layoutY="558.0" onMouseClicked="#sendMessage" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="35.0" fitWidth="26.0" layoutX="763.0" layoutY="568.0" onMouseClicked="#sendMessage" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/send.png" />
                </image>
             </ImageView>
-            <TextField fx:id="NewMessageTextField" layoutX="539.0" layoutY="568.0" prefHeight="26.0" prefWidth="177.0" promptText="Unesite poruku..." style="-fx-background-color: #f2db90;" />
-            <TextArea fx:id="MessageTextArea" layoutX="542.0" layoutY="280.0" prefHeight="257.0" prefWidth="234.0" />
+            <TextField fx:id="NewMessageTextField" layoutX="539.0" layoutY="568.0" prefHeight="26.0" prefWidth="158.0" promptText="Unesite poruku..." style="-fx-background-color: #f2db90;" />
+            <TextArea fx:id="messageTextArea" layoutX="542.0" layoutY="280.0" prefHeight="257.0" prefWidth="234.0" />
+            <ImageView fx:id="addFileImageView" fitHeight="26.0" fitWidth="39.0" layoutX="712.0" layoutY="568.0" onMouseClicked="#chooseFile" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/paperclip.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
